# quicklendx-protocol

./: README.md
quicklendx-contracts/: CONTRIBUTING.md  Cargo.toml
quicklendx-contracts/.cph/: .test.rs_5e570a5ca884a236eaa714a3ed282ed5.prob
quicklendx-contracts/src/: audit.rs  backup.rs  bid.rs  defaults.rs  errors.rs  events.rs  investment.rs  invoice.rs  lib.rs  payments.rs  profits.rs  settlement.rs  test.rs  verification.rs
quicklendx-contracts/test_snapshots/test/: test_add_invoice_rating.1.json  test_add_invoice_rating_validation.1.json  test_archive_backup.1.json  test_backup_cleanup.1.json  test_backup_validation.1.json  test_create_and_restore_backup.1.json  test_duplicate_rating_prevention.1.json  test_escrow_creation_on_bid_acceptance.1.json  test_escrow_double_operation_prevention.1.json  test_escrow_refund.1.json  test_get_available_invoices.1.json  test_get_business_invoices.1.json  test_get_invoices_by_status.1.json  test_get_verification_lists.1.json  test_invoice_count_functions.1.json  test_invoice_lifecycle.1.json  test_kyc_already_pending.1.json  test_kyc_already_verified.1.json  test_kyc_resubmission_after_rejection.1.json  test_multiple_ratings.1.json  test_rating_on_unfunded_invoice.1.json  test_rating_queries.1.json  test_rating_statistics.1.json  test_reject_business.1.json  test_simple_bid_storage.1.json  test_store_invoice.1.json  test_store_invoice_validation.1.json  test_unauthorized_backup_operations.1.json  test_unique_bid_id_generation.1.json  test_unique_investment_id_generation.1.json  test_update_invoice_status.1.json  (+2 more)
(+4 files in other folders)
